--- a/mystyle.css
+++ b/mystyle.css
@@ -2,12 +2,12 @@ body {background-color: purple;}
 h1{color: green;}
 h6{color: red;}
 
-.homelink {
+a:link.homelink {
 color: red;
 background-color: white;
 }
 
-.homelink {
+a:hover.homelink {
 background-color: red;
 }
 
