--- a/mystyle.css
+++ b/mystyle.css
@@ -5,11 +5,14 @@ h6{color: red;}
 a:link.homelink {
 color: red;
 background-color: white;
+text-decoration: none;
 font-size: 200%
+
 }
 
 a:hover.homelink {
 background-color: red;
+text-decoration: none;
 }
 
 img {
@@ -87,6 +90,8 @@ width: 5%;
 text-align: center;
 margin: 10px;
 padding: 10px;
+bottom: 0%;
+right: 0%;
 }
 
 a:hover.homebutton {
